# go-idol

./: LICENSE.txt  MODULE.bazel  README.asciidoc
idol/: BUILD  array_test.go  go.mod  idol.go  idol_array.go  idol_errors.go  idol_field_builders.go  idol_message.go  message_test.go
idol/codegen_idl/: BUILD  codegen_idl.go
idol/compiler/: BUILD  compiler.go  compiler_deps.go  compiler_errors.go  compiler_test.go  compiler_warnings.go
idol/encoding/idolbin/: BUILD  idolbin.go  idolbin_message.go  idolbin_message_field.go  idolbin_test.go
idol/encoding/idoltext/: BUILD  idoltext.go  idoltext_encode.go
idol/internal/testutil/: BUILD  go.mod  testutil.go  testutil_assertions.go  testutil_schema.go  testutil_syntax.go
idol/schema_idl/: BUILD  schema_idl.go
idol/syntax/: BUILD  syntax.go  syntax_errors.go  syntax_nodes.go  syntax_test.go  syntax_tokens.go  tokens_test.go
